--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="site-footer-credits" style="display: inline-block">
           <dl title="这是我的一些小demo演示网页">
             <dt>demo1</dt>
-              <dd><a href="http://36.111.38.63:8068/credit/common/apply?source=%E7%BD%91%E7%BB%9C">表单验证效果</a></dd>
+              <dd><a href="./smalltemplate/smartdata/table1.html">bootstrap-table表格</a></dd>
             <dt>demo2</dt>
               <dd><a href="./smalltemplate/smartdata/firstpage.html">智数公司作品部分</a></dd>
             <dt>demo3</dt>
